--- a/SEA_Application/Views/InventoryManager/BlankPage.cshtml
+++ b/SEA_Application/Views/InventoryManager/BlankPage.cshtml
@@ -57,7 +57,7 @@ else if (User.IsInRole("InventoryManager"))
 </div>
 
 <div class="row">
-    <div class="col-md-3">
+    @*<div class="col-md-3">
         <div class="card">
             <div class="card-body p-4">
 
@@ -72,9 +72,9 @@ else if (User.IsInRole("InventoryManager"))
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 
-    <div class="col-md-3">
+    <div class="col-md-4">
         <div class="card">
             <div class="card-body p-4">
                 <div class="row">
@@ -92,7 +92,7 @@ else if (User.IsInRole("InventoryManager"))
             </div>
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
         <div class="card">
             <div class="card-body p-4">
 
@@ -113,7 +113,7 @@ else if (User.IsInRole("InventoryManager"))
             </div>
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
         <div class="card">
             <div class="card-body p-4">
 
