--- a/SEA_Application/Views/Shared/_BakeryAdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_BakeryAdminDashboardLayout.cshtml
@@ -276,7 +276,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link p-0" href="javascript:;" id="navbarDropdownProfile"
                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <div id="theDiv"><img id="theImg" src="" /></div>
+                                    <div id="theDiv"><img height="45" id="theImg" src="~/Content/assets/assets/img/Bis.jpg" /></div>
                                     <p class="d-lg-none d-md-block">
                                         Account
                                     </p>
@@ -1665,7 +1665,7 @@
                 $(".changepassword-form").serialize(),
                 function (data) {
 
-                    $('#theDiv').prepend('<img id="theImg" height ="45" width = "45" src="/Content/Images/StudentImages/' + data + '" />')
+                    //$('#theDiv').prepend('<img id="theImg" height ="45" width = "45" src="/Content/Images/StudentImages/' + data + '" />')
 
 
 
