--- a/SEA_Application/Views/Sales/Summary.cshtml
+++ b/SEA_Application/Views/Sales/Summary.cshtml
@@ -111,6 +111,8 @@ else if (User.IsInRole("BakeryAdmin"))
                         <th>Customer</th>
                         <th>Status </th>
                         <th>Total</th>
+                        <th>Discount Type</th>
+                        <th>Discount Percentage %</th>
                         <th>Discount</th>
                         <th>Total Discounted </th>
 
@@ -222,13 +224,22 @@ else if (User.IsInRole("BakeryAdmin"))
                     DiscountTotal = DiscountTotal + data[index].Discount;
                     GrandTotalDiscounted = GrandTotalDiscounted + data[index].DiscountedPrice;
 
-                    $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td> <td>" + data[index].CustomerName + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>-" + data[index].Discount + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
+                 //   $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td> <td>" + data[index].CustomerName + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>-" + data[index].Discount + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
+                    if (data[index].Status == 'Paid') {
+                        $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td><td>" + data[index].CustomerName + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>" + data[index].DiscountType + "</td><td>" + data[index].DiscountPercentage + "%</td><td>-" + data[index].Discount + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
+                    }
+                    else {
+                        $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td><td>" + data[index].CustomerName + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>" + data[index].DiscountType + "</td><td>" + Math.abs(data[index].DiscountPercentage) + "%</td><td>" + Math.abs(data[index].Discount) + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
 
+                    }
                 })
 
-                $("#SaleReport").append("<tr> <td >Grand Total</td><td></td>  <td></td>  <td></td> <td>" + GrandTotal + "</td><td>-" + DiscountTotal + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
+                //$("#SaleReport").append("<tr> <td >Grand Total</td><td></td>  <td></td>  <td></td> <td>" + GrandTotal + "</td><td>-" + DiscountTotal + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
 
-                var AllTds = $("td:nth-child(5),td:nth-child(6),td:nth-child(7)");
+
+                $("#SaleReport").append("<tr> <td >Grand Total</td> <td></td><td></td>   <td></td><td>" + GrandTotal + "</td><td></td><td></td> <td>-" + Math.abs(DiscountTotal) + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
+
+                var AllTds = $("td:nth-child(5),td:nth-child(8),td:nth-child(9)");
 
                 for (var i = 0; i < AllTds.length; i++) {
 
@@ -418,15 +429,23 @@ else if (User.IsInRole("BakeryAdmin"))
                     DiscountTotal = DiscountTotal + data[index].Discount;
                     GrandTotalDiscounted = GrandTotalDiscounted + data[index].DiscountedPrice;
 
-                    $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td><td>" + data[index].CustomerName + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>" + data[index].Discount + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
+                  //  $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td><td>" + data[index].CustomerName + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>" + data[index].DiscountType + "</td><td>" + data[index].DiscountPercentage + "%</td><td>-" + data[index].Discount + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
 
+                    if (data[index].Status == 'Paid') {
+                        $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td><td>" + data[index].CustomerName + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>" + data[index].DiscountType + "</td><td>" + data[index].DiscountPercentage + "%</td><td>-" + data[index].Discount + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
+                    }
+                    else {
+                        $("#SaleReport").append("<tr> <td >" + dat + "</td><td>" + data[index].OrderNo + "</td><td>" + data[index].CustomerName + "</td><td>" + data[index].Status + "</td><td>" + data[index].Total + "</td><td>" + data[index].DiscountType + "</td><td>" + Math.abs(data[index].DiscountPercentage) + "%</td><td>" + Math.abs(data[index].Discount) + "</td><td>" + data[index].DiscountedPrice + "</td> <td class='detailscolumn'><center> <input onclick='OrderDetails(" + data[index].Id + ")' type='button' style='font-size:12px;' class='btn btn-primary  white' value='Details' id='" + data[index].Id + "' ></center></td></tr>");
+
+                    }
                 })
 
-                $("#SaleReport").append("<tr> <td >Grand Total</td> <td></td><td></td>   <td></td> <td>" + GrandTotal + "</td><td>" + DiscountTotal + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
+              //  $("#SaleReport").append("<tr> <td >Grand Total</td> <td></td><td></td>   <td></td><td></td><td></td> <td>" + GrandTotal + "</td><td>" + DiscountTotal + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
+                $("#SaleReport").append("<tr> <td >Grand Total</td> <td></td><td></td>   <td></td><td>" + GrandTotal + "</td><td></td><td></td> <td> -" + Math.abs(DiscountTotal) + "</td><td>" + GrandTotalDiscounted + "</td></tr>")
 
 
 
-                var AllTds = $("td:nth-child(5),td:nth-child(6),td:nth-child(7)");
+                var AllTds = $("td:nth-child(5),td:nth-child(8),td:nth-child(9)");
 
                 for (var i = 0; i < AllTds.length; i++) {
 
