--- a/SEA_Application/Views/Shared/_CashierDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_CashierDashboardLayout.cshtml
@@ -113,7 +113,13 @@
                         </a>
                     </li>
 
+                    <li id="DiscountPercentageTab" class="nav-item">
 
+                        <a href="@Url.Action("Index", "SaleDiscount" )" class="nav-link nav-toggle">
+                            <i class="fa fa-percent"></i>
+                            <p>Sale Discount</p>
+                        </a>
+                    </li>
                     <li id="CashierSale" class="nav-item">
 
                         <a href="@Url.Action("Index", "Sales" )" class="nav-link nav-toggle">
